Fixed photo alignment

--- a/styles.css
+++ b/styles.css
@@ -218,8 +218,8 @@ html {
 }
 
 .circle-placeholder img {
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: 95%;
     object-fit: cover;
     border-radius: 50%;
 }
